fix code scrollbars

--- a/public/scss/default.scss
+++ b/public/scss/default.scss
@@ -4,7 +4,7 @@
 	background-color: inherit;
 	border: none;
 	code {
-		width: 100%;
+		min-width: 100%;
 	}
 	code[data-lines="1"] {
 		white-space: normal !important;
